[project]
name = "pytorch-torchsig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyterlab>=4.5.4",
    "torch",
    "torchsig",
]

[tool.uv.sources]
torchsig = { git = "https://github.com/TorchDSP/torchsig.git" }
